fix for 100% height on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html {
 body {
     height: 100vh; /* Fallback for browsers that do not support Custom Properties */
     /* fix for mobile 100vh bug */
-    /* height: calc(var(--vh, 1vh) * 100); */
+    height: calc(var(--vh, 1vh) * 100);
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -133,21 +133,6 @@ header {
 }
 
 h1 {
-    /* font-family: 'Bai Jamjuree', sans-serif;
-    font-size: 34px;
-    margin-top:0;
-    padding-top: 39px;
-    background-image: url(images/san-diego-logo-transparent50.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    height: 70px;
-    color: #000;
-    text-shadow: 0 0 3px #fff, 
-                0 0 3px #fff, 
-                0 0 3px #fff, 
-                0 0 2px #fff, 
-                0 0 1px #fff; */
     font-family: 'Bai Jamjuree', sans-serif;
     font-size: 32px;
     margin-top: 0;
